using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace Assets.Scripts.FSM
{
    public static class GameStateTransitions
    {
        public const string UnitClicked = "UnitClicked";
        public const string Deselect = "Deselect";
        public const string TargetAbility = "TargetAbility";
    }
}
